# domkrat3d

./: .clang-format  .clang-tidy  .gitignore  .report_log.txt  BUILDING.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Doxyfile  HACKING.md  README.md  analyzecode.py  build.sh  check_compability.sh  default.nix  flake.nix  format-code.py  getversion.py  shell.nix
.github/workflows/: cmake-multi-platform.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake
docs/: debug_levels.excalidraw  versioning.excalidraw
docs/VulkanInDomkrat/: Vulkan In Domkrat (RU).md
docs/images/: debug_levels.excalidraw
domkrat3d/: CMakePresets.json
domkrat3d/cmake/: install-config.cmake  variables.cmake
domkrat3d/source/: domkrat3d.cpp
domkrat3d/test/source/: domkrat3d_test.cpp
examples/: CMakeLists.txt  full.cpp
include/domkrat3d/: _default.hpp  domkrat3d.hpp  export.h  tracelogger.hpp
include/domkrat3d/graphics/: basic.hpp  core.hpp  simple.hpp
include/domkrat3d/informatics/: core.hpp
include/domkrat3d/mathematics/: core.hpp  equations.hpp  statistics.hpp
include/domkrat3d/physics/: core.hpp  kinematics.hpp
include/domkrat3d/utils/: random.hpp
source/: domkrat3d.cpp  shell.nix  tracelogger.cpp
source/graphics/: basic.cpp  core.cpp  simple.cpp
source/informatics/: core.cpp
source/mathematics/: core.cpp  equations.cpp  statistics.cpp
source/physics/: core.cpp  kinematics.cpp
source/utils/: random.cpp
test/: CMakeCache.txt  CMakeLists.txt
test/source/: domkrat3d_test.cpp
utils/: cpp_analyzer.py  format-code.py  git_analyzer.py  packager.json  packager.yaml  project_packager.py
